--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             <div class="hero-header">
                 <img src="./img/logo.png" alt="Novikov Yury" class="logo">
                 <div class="social-links">
-                    <a href="https://github.com/nov861" class="social-link"><img src="./img/social/github.svg" alt="github"></a>
-                    <a href="http://instagram.com/novikovyurkaa/" class="social-link"><img src="./img/social/twitter.svg" alt=""></a>
-                    <a href="" class="social-link"><img src="./img/social/instagram.svg" alt=""></a>
-                    <a href="" class="social-link"><img src="./img/social/facebook.svg" alt=""></a>
+                    <a href="https://github.com/nov861" target="_blank" class="social-link"><img src="./img/social/github.svg" alt="github"></a>
+                    <a href="http://instagram.com/novikovyurkaa/" target="_blank" class="social-link"><img src="./img/social/twitter.svg" alt=""></a>
+                    <a href="" class="social-link" target="_blank"><img src="./img/social/instagram.svg" alt=""></a>
+                    <a href="" class="social-link" target="_blank"><img src="./img/social/facebook.svg" alt=""></a>
                 </div>
             </div>
             <div class="hero-content">
@@ -260,10 +260,10 @@
                         </div>
                     </div>
                     <div class="social-links">
-                        <a href="https://github.com/nov861" class="social-link"><img src="./img/social/github.svg" alt="github"></a>
-                        <a href="http://instagram.com/novikovyurkaa/" class="social-link"><img src="./img/social/twitter.svg" alt=""></a>
-                        <a href="" class="social-link"><img src="./img/social/instagram.svg" alt=""></a>
-                        <a href="" class="social-link"><img src="./img/social/facebook.svg" alt=""></a>
+                        <a href="https://github.com/nov861" class="social-link" target="_blank"><img src="./img/social/github.svg" alt="github"></a>
+                        <a href="http://instagram.com/novikovyurkaa/" class="social-link" target="_blank"><img src="./img/social/twitter.svg" alt=""></a>
+                        <a href="" class="social-link" target="_blank"><img src="./img/social/instagram.svg" alt=""></a>
+                        <a href="" class="social-link" target="_blank"><img src="./img/social/facebook.svg" alt=""></a>
                     </div>
                     <a href="#" class="contacts-policy">Политика конфиденциальности</a>
                 </div>
