--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
                 <img src="./img/logo.png" alt="Novikov Yury" class="logo">
                 <div class="social-links">
                     <a href="https://github.com/nov861" target="_blank" class="social-link"><img src="./img/social/github.svg" alt="github"></a>
-                    <a href="http://instagram.com/novikovyurkaa/" target="_blank" class="social-link"><img src="./img/social/twitter.svg" alt=""></a>
-                    <a href="" class="social-link" target="_blank"><img src="./img/social/instagram.svg" alt=""></a>
-                    <a href="" class="social-link" target="_blank"><img src="./img/social/facebook.svg" alt=""></a>
+                    <a href="https://twitter.com/novikovyurkaa" target="_blank" class="social-link"><img src="./img/social/twitter.svg" alt=""></a>
+                    <a href="https://instagram.com/novikovyurkaa/" target="_blank" class="social-link"><img src="./img/social/instagram.svg" alt=""></a>
+                    <a href="https://clck.ru/M7n9y" target="_blank" class="social-link"><img src="./img/social/facebook.svg" alt=""></a>
                 </div>
             </div>
             <div class="hero-content">
@@ -69,8 +69,8 @@
                         <img src="./img/features/steps-img.svg" alt="Премежуточные итоги" class="features-image wow bounceIn" data-wow-delay="2s">
                         <h3 class="features-title">Премежуточные итоги</h3>
                         <p class="features-text">Показываю работу поэтапно, 
-                            а не  в последий момент перед 
-                             крайним сроком. 
+                            а не в последий момент перед 
+                            крайним сроком. 
                         </p>
                     </div>
                     <div class="features-item">
@@ -246,24 +246,24 @@
                     <div class="contacts-data">
                         <div class="contacts-phone">
                            <h4 class="contacts-title">Телефон</h4> 
-                            <a class="contacts-link" href="tel:+79991234567">+7 999 123-45-67</a>
+                            <a class="contacts-link" href="tel:+79186909576">+7 918 690-95-76</a>
                         </div>
                         <div class="contacts-mail">
                             <h4 class="contacts-title">Почта</h4> 
-                            <a class="contacts-link" href="mailto:mail@mail.ru">mail@mail.ru</a>
+                            <a class="contacts-link" href="mailto:nov8861@yandex.ru">nov8861@yandex.ru</a>
                         </div>
                         <div class="contacts-social">
                             <h4 class="contacts-title">Соцсети</h4> 
-                            <a href="#" class="contacts-link">t.me/nov861</a>
-                            <a href="#" class="contacts-link">vk.me/yokek</a>
-                            <a href="#" class="contacts-link">fb.me/nov861</a>
+                            <a href="https://tele.gg/nov861" class="contacts-link">t.me/nov861</a>
+                            <a href="https://vk.me/yokek" class="contacts-link">vk.me/yokek</a>
+                            <a href="https://clck.ru/M7n9y" class="contacts-link">fb.me/nov861</a>
                         </div>
                     </div>
                     <div class="social-links">
-                        <a href="https://github.com/nov861" class="social-link" target="_blank"><img src="./img/social/github.svg" alt="github"></a>
-                        <a href="http://instagram.com/novikovyurkaa/" class="social-link" target="_blank"><img src="./img/social/twitter.svg" alt=""></a>
-                        <a href="" class="social-link" target="_blank"><img src="./img/social/instagram.svg" alt=""></a>
-                        <a href="" class="social-link" target="_blank"><img src="./img/social/facebook.svg" alt=""></a>
+                        <a href="https://github.com/nov861" target="_blank" class="social-link"><img src="./img/social/github.svg" alt="github"></a>
+                        <a href="https://twitter.com/novikovyurkaa" target="_blank" class="social-link"><img src="./img/social/twitter.svg" alt=""></a>
+                        <a href="https://instagram.com/novikovyurkaa/" target="_blank" class="social-link"><img src="./img/social/instagram.svg" alt=""></a>
+                        <a href="https://clck.ru/M7n9y" target="_blank" class="social-link"><img src="./img/social/facebook.svg" alt=""></a>
                     </div>
                     <a href="#" class="contacts-policy">Политика конфиденциальности</a>
                 </div>
