--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
             <div class="hero-content">
                 <div class="hero-text">
-                    <span class="hero-subtitle wow fadeInRight" data-wow-delay="0.3s">Фрилансер</span>
+                    <span class="hero-subtitle wow fadeInRight" data-wow-delay="0.3s">Веб-разработчик</span>
                     <h1 class="hero-title wow fadeInRight" data-wow-delay="0.4s">Новиков Юрий</h1>
                     <p class="hero-description wow fadeInRight" data-wow-delay="0.6s">Разрабатываю сайты для малого и среднего бизнеса. 
                         У меня можно заказать дизайн и верстку 
@@ -45,8 +45,8 @@
                     <div class="features-item">
                         <img src="./img/features/offer-img.svg" alt="По договору" class="features-image wow bounceIn" data-wow-delay="1s">
                         <h3 class="features-title">По договору</h3>
-                        <p class="features-text">Предоставлю все документы для бухгалтерии: договоры, 
-                            счета и акты. Работаю как ИП без НДС.
+                        <p class="features-text">Составляю договор на выполнение работ
+                            по разработке сайта.
                         </p>
                     </div>
                     <div class="features-item">
@@ -115,7 +115,7 @@
                                     <img src="./img/cost-icon.svg" alt="Cost" class="project-icon">
                                     <div class="project-description">
                                         <h4 class="project-subtitle">Стоимость</h4>
-                                        <p class="project-paragraph">14 000 рублей</p>
+                                        <p class="project-paragraph">10 000 рублей</p>
                                     </div>
                                 </div>
                                 <div class="project-feedback">
@@ -254,9 +254,9 @@
                         </div>
                         <div class="contacts-social">
                             <h4 class="contacts-title">Соцсети</h4> 
-                            <a href="https://tele.gg/nov861" class="contacts-link">t.me/nov861</a>
-                            <a href="https://vk.me/yokek" class="contacts-link">vk.me/yokek</a>
-                            <a href="https://clck.ru/M7n9y" class="contacts-link">fb.me/nov861</a>
+                            <a href="https://tele.gg/nov861" class="contacts-link" target="_blank">t.me/nov861</a>
+                            <a href="https://vk.me/yokek" class="contacts-link" target="_blank">vk.me/yokek</a>
+                            <a href="https://clck.ru/M7n9y" class="contacts-link" target="_blank">fb.me/nov861</a>
                         </div>
                     </div>
                     <div class="social-links">
